--- a/compose.yml
+++ b/compose.yml
@@ -19,8 +19,8 @@ volumes:
 
 services:
   playedu:
-    # build: .
-    image: registry.cn-hangzhou.aliyuncs.com/playedu/light:1.8
+    build: .
+    # image: registry.cn-hangzhou.aliyuncs.com/playedu/light:1.8
     restart: always
     environment:
       - DB_HOST=mysql
