--- a/playedu-server/.gitignore
+++ b/playedu-server/.gitignore
@@ -32,6 +32,6 @@ build/
 ### VS Code ###
 .vscode/
 
-/src/main/resources/application-dev.yml
-/playedu-api/src/main/resources/application-dev.yml
+# /src/main/resources/application-dev.yml
+# /playedu-api/src/main/resources/application-dev.yml
 /logs
