--- a/playedu-server/playedu-api/pom.xml
+++ b/playedu-server/playedu-api/pom.xml
@@ -36,6 +36,12 @@
             <artifactId>playedu-resource</artifactId>
             <version>1.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <scope>runtime</scope>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
 
     <build>
