--- a/playedu-server/docker/docker-compose.yml
+++ b/playedu-server/docker/docker-compose.yml
@@ -14,7 +14,7 @@ services:
 
   # 只保留 SRS 流媒体服务
   srs:
-    image: ossrs/srs:5
+    image: registry.cn-hangzhou.aliyuncs.com/ossrs/srs:5
     container_name: playedu-srs
     ports:
       - "1935:1935"  # RTMP推流端口
